--- a/homework_02/homework_02 (1).ipynb
+++ b/homework_02/homework_02 (1).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "id": "2a7fc812",
    "metadata": {},
    "outputs": [
@@ -205,20 +205,18 @@
       "3  bottles of beer on the wall,  3  bottles of beer.\n",
       "Take one down and pass it around,  2  bottles of beer on the wall.\n",
       "2  bottles of beer on the wall,  2  bottles of beer.\n",
-      "Take one down and pass it around,  1  bottle of beer on the wall.\n",
-      "1 bottle of beer on the wall, 1 bottle of beer.\n",
-      "Take one down and pass it around, no more bottles of beer to go\n"
+      "Take one down and pass it around,  1  bottle of beer on the wall.\n"
      ]
     }
    ],
    "source": [
-    "for n in range(99,0,-1):\n",
+    "for n in range(99,1,-1):\n",
     "        if n == 0:\n",
     "            print (\"No more bottles of beer on the wall, no more bottles of beer.\")\n",
     "            print (\"Go to the store and buy some more,99 bottles of beer on the wall\")\n",
     "        elif n == 1:\n",
     "            print (\"1 bottle of beer on the wall, 1 bottle of beer.\")\n",
-    "            print (\"Take one down and pass it around, no more bottles of beer to go\")\n",
+    "            print (\"Take one down and pass it around, no more bottles of beer on the wall. \")\n",
     "        elif n == 2:\n",
     "            print (n, \" bottles of beer on the wall, \" ,n, \" bottles of beer.\")\n",
     "            print (\"Take one down and pass it around, \" ,n-1, \" bottle of beer on the wall.\")\n",
