--- a/дз на 5.10.21/3_task.ipynb
+++ b/дз на 5.10.21/3_task.ipynb
@@ -151,18 +151,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "6b038f87",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      1      \n",
+      "     121     \n",
+      "    12321    \n",
+      "   1234321   \n",
+      "  123454321  \n",
+      " 12345654321 \n",
+      "1234567654321\n"
+     ]
+    }
+   ],
    "source": [
-    "# Начните писать код тут\n",
-    "def pirramida(n:int(input())) -> None:\n",
-    "    for i in range (1,n+1):\n",
-    "        for j in range (1, i+1):\n",
-    "            print (j, end='')\n",
-    "    \n",
-    "pirramida(6)"
+    "def triangle(n):\n",
+    "    for i in range(1, n + 1):\n",
+    "        m = ' ' * (n - i)\n",
+    "        for j in range(1, i + 1):\n",
+    "            m += str(j)\n",
+    "        else:\n",
+    "            print(m + m[n - 2::-1])\n",
+    "\n",
+    "triangle(7)"
    ]
   },
   {
@@ -178,13 +194,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "id": "2d0be107",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      1      \n",
+      "     121     \n",
+      "    12321    \n",
+      "   1234321   \n",
+      "  123454321  \n",
+      " 12345654321 \n",
+      "1234567654321\n",
+      " 12345654321 \n",
+      "  123454321  \n",
+      "   1234321   \n",
+      "    12321    \n",
+      "     121     \n",
+      "      1      \n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def piramida(n):\n",
+    "    for i in range(1, n + 1):\n",
+    "        m = ' ' * (n - i)\n",
+    "        for j in range(1, i + 1):\n",
+    "            m += str(j)\n",
+    "        else:\n",
+    "            print(m + m[n - 2::-1])\n",
+    "\n",
+    "    for i in range(n - 1, 0, -1):\n",
+    "        m = ' ' * (n - i)\n",
+    "        for j in range(1, i + 1):\n",
+    "            m += str(j)\n",
+    "        else:\n",
+    "            print(m + m[n - 2::-1])\n",
+    "\n",
+    "\n",
+    "piramida(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5eaae897",
+   "id": "1b517304",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Начните писать код тут"
-   ]
+   "source": []
   }
  ],
  "metadata": {
