--- a/дз на 5.10.21/5_task.ipynb
+++ b/дз на 5.10.21/5_task.ipynb
@@ -15,24 +15,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "6ef6d9b3",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1, 2, 4, 6, 7\n",
-      "1 ,4 ,7\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[1, 5, 58]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Начните писать код тут\n",
-    "a = input()\n",
-    "b = a[::2]\n",
-    "print(b)"
+    "\n",
+    "def chetni_index (a: list) -> list:\n",
+    "    b = []\n",
+    "    for i in range (0, len(a), 2):\n",
+    "        b.append(a[i])\n",
+    "    return (b)\n",
+    "a = [1, 3, 5, 67, 58]\n",
+    "chetni_index(a)"
    ]
   },
   {
@@ -47,30 +54,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "3a8cf925",
+   "execution_count": 5,
+   "id": "58bad8cd",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 5 56 87 3 42 2 1\n",
-      "5\n",
-      "56\n",
-      "87\n",
-      "42\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[3, 5, 67]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Начните писать код тут\n",
-    "a = [int(i) for i in input().split()]\n",
-    "for i in range(1, len(a)):\n",
-    "    if a[i] > a[i - 1]:\n",
-    "        print(a[i])\n",
-    "\n",
-    "        "
+    "def bolhe_prohlogo(a: list) -> list:\n",
+    "    b = []\n",
+    "    for i in range (1, len(a)):\n",
+    "        if a[i] > a[i-1]:\n",
+    "            b.append(a[i])\n",
+    "    return (b)\n",
+    "a = [1, 3, 5, 67, 58]\n",
+    "bolhe_prohlogo(a)"
    ]
   },
   {
@@ -85,12 +92,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "34d2beae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[67, 3, 5, 1, 58]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Начните писать код тут"
+    "# Начните писать код тут\n",
+    "def min_max (arr: list) -> int:\n",
+    "    min_i = arr.index (max (arr))\n",
+    "    max_i = arr.index (min (arr))\n",
+    "    arr [max_i], arr [min_i] = arr [min_i], arr [max_i]\n",
+    "    return (arr)\n",
+    "a = [1, 3, 5, 67, 58]\n",
+    "min_max(a)"
    ]
   }
  ],
